--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <ul type="none">
             <li class="namelogo">
-                <p class="Amancio">Amancio</p>
+                <p class="Amancio">Amâncio</p>
                 <p class="Chiluvane">Chiluvane</p>
             </li>
             <li>
