--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@600&family=Roboto+Mono:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -28,7 +31,7 @@
     <main>
         <div class="content">
             <h1>Hello!</h1>
-            <p>My name is Amâncio Fernadno Chiluvane, I’m a Fronted  developer, I love to do big and hard things in order to help the world </p>
+            <p>My name is Amâncio Fernando Chiluvane, I’m a Fronted  developer, I love to do big and hard things in order to help the world </p>
             <a href="https://amanciochiluvane.github.io/Social-media/"><button>Contact Me!🚀</button></a>
         </div>
 
