Created About me page

--- a/About.html
+++ b/About.html
@@ -29,38 +29,21 @@
     </header>
     
     <main>
+
+        <div class="image">
+            <img src="images/IMG_20230519_124712_262.jpg" alt="Foto">
+        </div>
+
         <div class="content">
-            <h1>Hello!</h1>
+            <h1>Hello!😁</h1>
             <p>My name is Amâncio Fernando Chiluvane, I’m a Fronted  developer, I love to do big and hard things in order to help the world </p>
-            <a href="https://amanciochiluvane.github.io/Social-media/"><button>Contact Me!🚀</button></a>
-        </div>
-
-        <div class="balloon-box balloon-circle">
-            <p class="balloon-text">
-                Let's see what I can do for you
+            <p>
+                I'm a Computer Engineering student at Eduardo Mondlane University, where I learn from the backend to the frontend. I'm also a Software Engineering student at ALX and I'm a designer too.
+                Talking about myself in the development career is talking about a young man who dominates front and backend. At the front I master the technologies HTML, CSS, JS, REACTJS, NODEJS. In the backend part, I use technologies like java, python, mysql, C, C++.
+                I learn a lot from YouTube, that's why I have a YouTube channel that talks about technology <a href="https://youtu.be/9QQkU_AM8K0">Youtube</a>. In the design part I make logos, posters, badges, image editing and much more, using the tools: adobe illustrator and adobe photoshop.
+                I started programming when I was 17, it was during the pandemic, and my first language was pyhton. Thank you for coming this far and reading my journey through the program. I hope you enjoyed.
             </p>
-        </div>
-
-        <div class="title">
-            <div class="title1">
-                <h1>Developer</h1>
-                    <ul>
-                       <li>Website Creation</li>
-                       <li>Website Design Lessons</li>
-                       <li>Backend:Java,Python</li>
-                    </ul>
-            </div>
-
-
-
-            <div class="title2">
-                <h1>Design</h1>
-                    <ul>
-                        <li>Web Design</li>
-                        <li>Logo creation</li>
-                        <li>Image Manipulation</li>
-                    </ul>
-            </div>
+           
         </div>
     </main>
 
