--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="title">
             <div class="title1">
                 <h1>Developer</h1>
-                    <ul>
+                    <ul type="none">
                        <li>Website Creation</li>
                        <li>Website Design Lessons</li>
                        <li>Backend:Java,Python</li>
@@ -55,7 +55,7 @@
 
             <div class="title2">
                 <h1>Design</h1>
-                    <ul>
+                    <ul type="none">
                         <li>Web Design</li>
                         <li>Logo creation</li>
                         <li>Image Manipulation</li>
