Maked the site responsive

--- a/About.html
+++ b/About.html
@@ -31,7 +31,7 @@
     <main>
 
         <div class="image">
-            <img src="images/IMG_20230519_124712_262.jpg" alt="Foto">
+            <img src="images/109949333.jfif" alt="Foto">
         </div>
 
         <div class="content">
